--- a/RoadSense.UI/Layout/MainLayout.razor
+++ b/RoadSense.UI/Layout/MainLayout.razor
@@ -108,9 +108,9 @@
         var authState = await AuthStateTask;
         user = authState.User;
 
-        if(user.Identity.IsAuthenticated){
-            NavManager.NavigateTo("/dashboard");
-        }
+        // if(user.Identity.IsAuthenticated){
+        //     NavManager.NavigateTo("/dashboard");
+        // }
     }
 }
 
