--- a/RoadSense.UI/Pages/LandingPage/LandingPage.razor
+++ b/RoadSense.UI/Pages/LandingPage/LandingPage.razor
@@ -15,8 +15,8 @@
                     <img src="/images/Roadsensor_ICON.png" style="object-fit: contain;" width="65" />
                 </a>
                 <ul class="links">
-                    <li class="text-light">About Us</li>
-                    <li class="text-light">Services</li>
+                    <li><a class="text-light" href="#about-us">About Us</a></li>
+                    <li><a class="text-light" href="#service-gallery">Services</a></li>
                     <li class="text-light" @onclick="@(() => OpeForm("LOGIN"))">Login</li>
                     <li class="book" @onclick="@(() => OpeForm("SIGN UP"))">Sign Up</li>
 
@@ -43,7 +43,7 @@
                 <div class="info">
                     <h1><span class="text-light">Road</span><span class="text-danger">Sense</span></h1>
                     <p class="text-light">Monitor, Detect and Respond to Traffic Violations in Real Time.</p>
-                    <button class="signup">
+                    <button class="signup" @onclick="@(() => OpeForm("SIGN UP"))">
                         @*   <span class="mr-2">
                             <img src="/images/icons8-playstore-48.png" alt="Play Store" />
                         </span> *@
@@ -54,7 +54,7 @@
         </div>
     </div>
 
-    <section id="about-us" class="about-us py-5">
+    <section id="about-us" class="about-us">
         <div class="container">
             <div class="row align-items-start">
                 <div class="col-md-6 text-center">
@@ -63,7 +63,7 @@
                     class="img-fluid" />
                 </div>
                 <div class="col-md-6">
-                    <div class="subheading">About Us</div>
+                    <div id="subheading" class="subheading">About Us</div>
 
                     <h2>RoadSense Team</h2>
                     <p>
@@ -83,10 +83,10 @@
         </div>
     </section>
 
-    <h1 class="my-5 service-text">Our Features</h1>
+    <h1 class="mt-5 service-text">Our Features</h1>
     <section id="service-gallery" class="service-gallery">
         <div class="container">
-            <MudGrid Justify="Justify.Center" Style="min-height: 100vh; display: flex; flex-wrap: wrap;  margin-top: 50px;">
+            <MudGrid Justify="Justify.Center" Style="min-height: 300px; display: flex; flex-wrap: wrap;  margin-top: 50px;">
                 @foreach (var item in Services)
                 {
                     <MudItem xs="12" sm="12" md="6" lg="4" Style="display: flex; justify-content: center;">
