Minor changes in LandingPage

--- a/RoadSense.UI/Pages/LandingPage/LandingPage.razor
+++ b/RoadSense.UI/Pages/LandingPage/LandingPage.razor
@@ -83,7 +83,7 @@
         </div>
     </section>
 
-    <h1 class="mt-5 service-text">Our Features</h1>
+    <h1 class="mt-5 service-text">Our Services</h1>
     <section id="service-gallery" class="service-gallery">
         <div class="container">
             <MudGrid Justify="Justify.Center" Style="min-height: 300px; display: flex; flex-wrap: wrap;  margin-top: 50px;">
@@ -109,7 +109,7 @@
         <div class="container">
             <div class="d-flex justify-content-center">
                 <p class="footer-menu-item">
-                    Road Sense © Copyright | Designed & Developed by Angel Mae Lagare
+                    RoadSense © Copyright | Designed & Developed by Angel Mae Lagare
                 </p>
             </div>
         </div>
