Added Manage Violations Page with Integration

--- a/RoadSense.UI/Layout/MainLayout.razor
+++ b/RoadSense.UI/Layout/MainLayout.razor
@@ -48,8 +48,8 @@
                             <MudNavLink Style="color: white" Href="/security">Reports</MudNavLink>
                         </MudNavGroup>
                         <MudNavGroup Style="color: white" Title="Maintenance" Expanded="true">
-                            <MudNavLink Style="color: white" Href="/users">Violation list</MudNavLink>
-                            <MudNavLink Style="color: white" Href="/security">User list</MudNavLink>
+                            <MudNavLink Style="color: white" Href="/maintenace/manage/violations">Manage Violations</MudNavLink>
+                            <MudNavLink Style="color: white" Href="/maintenace/manage/users">Manage User</MudNavLink>
                         </MudNavGroup>
                         <MudNavLink Style="color: white; margin-top: 20px" Icon="@Icons.Material.Filled.Logout" OnClick="Logout">Logout</MudNavLink>
                     </MudNavMenu>
